hphp/test/quick/lsb_static_redeclare6.php.expectf

Fatal error: Cannot redeclare static A::$x as non-static C::$x in %s on line 10
